# zenodo_integration_app

./: MANIFEST.in  README.md  pyproject.toml  settings_local.py  setup.cfg
zenodo_integration_app/: apps.py  models.py  queue_settings_calculators.py  urls.py  views.py
zenodo_integration_app/migrations/: 0001_initial.py  0002_zenodoexperiment_depo_id.py  0003_remove_zenodoexperiment_uuid.py  0004_alter_zenodoexperiment_depo_id.py
zenodo_integration_app/output_views/: zenodo_link_view.py
zenodo_integration_app/static/zenodo_integration_app/: README.md
zenodo_integration_app/templates/zenodo_integration_app/: error.html  home.html  zenodo_upload.html
