[metadata]
name = zenodo_integration_app
version = 0.1.0
description = The Zenodo Integration apps integrates view providers to allow users to upload experiment results to Zenodo

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    requests-oauthlib
    python-dotenv

[options.entry_points]
airavata.djangoapp =
    zenodo_integration_app = zenodo_integration_app.apps:ZenodoIntegrationAppConfig
airavata.output_view_providers =
    zenodo_link_view = zenodo_integration_app.output_views.zenodo_link_view:ZenodoLinkViewProvider
